the first page is almost ready

--- a/app/styles/css.scss
+++ b/app/styles/css.scss
@@ -1,4 +1,4 @@
 @import "reset.scss";
 @import "font-awesome.scss";
-@import "variables";
-@import "style";
+@import "variables.scss";
+@import "style.scss";
