--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -2,6 +2,4 @@ $fontSansLight: 'open_sanslight', Georgia, 'Times New Roman', Times, serif;
 $fontSansSemibold: 'open_sanssemibold', Georgia, 'Times New Roman', Times, serif;
 $fontOpenSans: 'open_sansregular', Georgia, 'Times New Roman', Times, serif;
 
-
-
-
+$colorGreen: #8cc63e;
