--- a/app/bootstrap/css/bootstrap.css
+++ b/app/bootstrap/css/bootstrap.css
@@ -3635,27 +3635,27 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #007bff;
-  background-color: #007bff;
+  /* border-color: #007bff;
+  background-color: #007bff; */
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
-.custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
+/* .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
   border-color: #80bdff;
-}
+} */
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #b3d7ff;
-  border-color: #b3d7ff;
+  /* background-color: #b3d7ff; */
+  /* border-color: #b3d7ff; */
 }
 
-.custom-control-input:disabled ~ .custom-control-label {
+/* .custom-control-input:disabled ~ .custom-control-label {
   color: #6c757d;
-}
+} */
 
 .custom-control-input:disabled ~ .custom-control-label::before {
   background-color: #e9ecef;
@@ -3701,10 +3701,10 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 
-.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
+/* .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
   border-color: #007bff;
   background-color: #007bff;
-}
+} */
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
@@ -3847,7 +3847,7 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #80bdff;
+  /* border-color: #80bdff; */
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
@@ -6280,7 +6280,7 @@ a.close.disabled {
   position: absolute;
   right: 15%;
   bottom: 20px;
-  left: 15%;
+  /* left: 15%; */
   z-index: 10;
   padding-top: 20px;
   padding-bottom: 20px;
