--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -58,7 +58,9 @@ body *{
     .sales-leaders_head,
     .gallery_head,
     .map_head,
-    .news_head {
+    .news_head,
+    .gold_arms_head,
+    .wood_species_head {
         display: flex;
         justify-content: space-between;
         padding-bottom: 25px;
@@ -260,7 +262,7 @@ body *{
 
 
 
-
+// Секция "спецпредложения"
 .section_offers {
     padding-bottom: 30px;
 
@@ -337,6 +339,7 @@ body *{
 }
 
 
+// Секция "Партнеры"
 .section_partner {
     background: #f5f5f5;
     padding: 45px 0 60px 0;
@@ -528,9 +531,43 @@ body *{
     }
 }
 
-// секция с картой и "полезными ссылками"
+
+
+// Секция с картой и "полезными ссылками"
 .section_map {
     padding-bottom: 60px;
+
+    .map_green_pointer {
+        background: $colorGreen;
+        display: inline-block;
+        padding: 20px;
+        z-index: 10;
+        color: white;
+        line-height: 1.3em;
+        position: absolute;
+        margin: 40px 60px 0 0;
+        right: 0;
+        -webkit-box-shadow: 0px 9px 0px 0px rgba(48, 69, 131, 0.19);
+        -moz-box-shadow:    0px 9px 0px 0px rgba(48, 69, 131, 0.19);
+        box-shadow:         0px 9px 0px 0px rgba(48, 69, 131, 0.19);
+
+        &::after {
+            content: ''; 
+            position: absolute;
+            border: 20px solid transparent; 
+            border-left: 20px solid $colorGreen; 
+            border-top: 20px solid $colorGreen; 
+            left: 0;
+            bottom: -25px;
+            }
+        
+
+        span {
+            font-family: $fontSansLight;
+        }
+    }
+
+    
 
     .map_useful {
         padding-bottom: 30px;
@@ -555,7 +592,7 @@ body *{
 }
 
 
-
+// Секция "Новости"
 .section_news {
     padding-bottom: 50px;
 
@@ -580,5 +617,209 @@ body *{
         p {
             line-height: 1.4em;
         }
+    }
+}
+
+
+
+// Секция "тем у кого золотые руки"
+.section_gold_arms {
+    padding-bottom: 50px;
+
+    .container-fluid {
+        background: url(../images/gold-arms.png);
+        background-size: cover;
+
+        .offset-md-6 {
+            padding-left: 90px;
+        }
+        
+        .gold_arms_description {
+            padding: 30px;
+            background-color: rgba($color: #000000, $alpha: 0.7);
+            color: white;
+            width: 510px;
+            height: 100%;
+
+            h3 {
+                font-size: 25px;
+                font-family: $fontSansLight;
+            }
+
+            p {
+                padding: 20px 13px 12px 0;
+                line-height: 1.5em;
+            }
+
+            .gold_arms_description_val,
+            .gold_arms_description_price {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+                
+                span {
+                    margin: 7px 0;
+                    font-family: $fontSansLight;
+                }
+            }
+
+            .gold_arms_description_price {
+                padding-left: 40px;
+            }
+
+            .gold_arms_description_link_green {
+                color: $colorGreen;
+                display: block !important;
+                padding-top: 20px;
+
+                &:hover {
+                    color: white;
+                }
+            }
+
+            .gold_arms_description_btn {
+                padding: 50px 0 30px 0;
+
+                :nth-child(2) {
+                    margin-left: 20px;
+                }
+            } 
+        }
+    }
+}
+
+
+
+// секция "Породы деревьев"
+.section_wood_species {
+    padding-bottom: 60px;
+
+    .row {
+        :nth-child(2) > .wood_species_square_block > .wood_species_square_block_front {
+            background: url(../images/species-1.png);
+            background-repeat: no-repeat;
+        }
+
+        :nth-child(3) > .wood_species_square_block > .wood_species_square_block_front {
+            background: url(../images/species-2.png);
+            background-repeat: no-repeat;
+        }
+
+        :nth-child(4) > .wood_species_square_block > .wood_species_square_block_front {
+            background: url(../images/species-3.png);
+            background-repeat: no-repeat;
+        }
+
+        :nth-child(5) > .wood_species_square_block > .wood_species_square_block_front {
+            background: url(../images/species-4.png);
+            background-repeat: no-repeat;
+        }
+    }
+
+    .wood_species_square_block {
+        position: relative;
+        cursor: pointer;
+        
+
+        
+        .wood_species_square_block_front {
+    
+            h5 {
+                padding: 220px 0 30px 0;
+                font-size: 20px;
+            }
+        }
+
+        .wood_species_square_block_back {
+            background-color: rgba($color: #000000, $alpha: 0.7);
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: none;
+            color: white;
+            
+
+            .wood_species_square_block_back_circle {
+                background: #ada8a7;
+                width: 75px;
+                height: 75px;
+                border-radius: 50%;
+                margin: 0 auto;
+                margin-top: 60px;
+                
+                .parent_right_arrow {
+                    margin-right: 10px;
+    
+                    .right_arrow {
+                        width: 20px;
+                        height: 20px;
+                        border-right: 2px solid rgba($color: #000000, $alpha: 0.6);
+                        border-bottom: 2px solid rgba($color: #000000, $alpha: 0.6);
+                        transform: rotate(-45deg);
+                    }
+                }
+            }
+                        
+            .wood_species_square_block_back_head {
+                font-size: 20px;
+                padding: 30px 0 18px 0;
+            }
+            
+            .wood_species_square_block_back_btn {
+                background: $colorGreen;
+                font-size: 17px;
+                font-family: $fontSansSemibold;
+                padding: 12px 30px;
+                z-index: 5;
+                display: inline-block;
+            }  
+                    
+        }
+
+        &:hover {
+            .wood_species_square_block_back {
+                display: block;
+            }
+        }
+    }  
+}
+
+// Секция "Футер"
+#footer {
+    background: #998658;
+    color: white;
+    padding: 40px 0;
+
+    .footer_block {
+        margin-left: 15px;
+    }
+
+    a {
+        color: #e4dfd2;
+        font-family: $fontSansLight;
+
+        &:hover {
+            text-decoration: underline !important;
+        }
+    }
+
+    h5 {
+        font-size: 20px;
+        font-family: $fontSansSemibold;
+        margin-bottom: 40px;
+    }
+
+    li {
+        margin-top: 25px;
+    }
+
+    .link_email {
+        margin: 30px 0;
+        display: block;
+    }
+
+    .link_address {
+        line-height: 1.5em;
     }
 }
