--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -995,7 +995,7 @@ body *{
             h3 {
                 font-size: 17px;
                 background: #f2f2f2;
-                padding: 10px 15px;
+                padding: 10px 0 10px 13px;
                 margin-top: 20px;
                 border-top: 1px solid #e6e6e6;
                 border-right: 1px solid #e6e6e6;
